PIofSF/force-app/main/default/objects/Option__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>response content</description>
    <label>Content</label>
    <type>TextArea</type>
</CustomField>