PIofSF/force-app/main/default/objects/Option__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>is the relationship MD with the question to which they belong</description>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>