PIofSF/force-app/main/default/objects/Option__c/fields/Right_Answer__c.field-meta.xml
<CustomField>
    <fullName>Right_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Right Answer</label>
    <type>Checkbox</type>
</CustomField>