PIofSF/force-app/main/default/objects/Option__c/listViews/li.listView-meta.xml
<ListView>
    <fullName>li</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Right_Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>li</label>
</ListView>